Optimize project compile and run

--- a/windows/tasks.ini
+++ b/windows/tasks.ini
@@ -1,30 +1,13 @@
-#  全局配置，针对单文件和 cmake 编译运行
-
-[project-init]
-command="cmake -S . -B build"
-cwd=$(VIM_ROOT)
-errorformat=
-
-[project-build]
-command="cmake --build build"
-cwd=$(VIM_ROOT)
-errorformat=%f:%l:%m
-
 [project-run]
-command="build/$(VIM_PRONAME).exe"
-cwd=<root>
-output=terminal
-
-[file-build]
-command:cpp=g++ "$(VIM_FILEPATH)" -o "$(VIM_FILEDIR)\$(VIM_FILENOEXT).exe"
-cwd=$(VIM_FILEDIR)
-output=quickfix
+command=cmake -S . -B build && cmake --build build && "build/$(VIM_PRONAME)"
+cwd=$(VIM_ROOT)
 errorformat=%f:%l:%m
+output=quickfix
 save=1
 
 [file-run]
 command="$(VIM_FILEPATH)"
-command:c,cpp="$(VIM_PATHNOEXT)"
+command:c,cpp=g++ "$(VIM_FILEPATH)" -o "$(VIM_FILEDIR)/$(VIM_FILENOEXT)" && "$(VIM_PATHNOEXT)"
 command:go="$(VIM_PATHNOEXT)"
 command:python=python "$(VIM_FILENAME)"
 command:make=make -f "$(VIM_FILENAME)" run
@@ -44,6 +27,7 @@ command:scala=scala "$(VIM_FILENAME)"
 command:haskell=ghci "$(VIM_FILENAME)"
 command:applescript=osascript "$(VIM_FILENAME)"
 command:vim=:source %
-output=terminal
+output=quickfix
+errorformat=%f:%l:%m
 cwd=$(VIM_FILEDIR)
 save=2
