--- a/windows/tasks.ini
+++ b/windows/tasks.ini
@@ -27,7 +27,8 @@ command:scala=scala "$(VIM_FILENAME)"
 command:haskell=ghci "$(VIM_FILENAME)"
 command:applescript=osascript "$(VIM_FILENAME)"
 command:vim=:source %
-output=quickfix
+output=terminal
+pos=external
 errorformat=%f:%l:%m
 cwd=$(VIM_FILEDIR)
 save=2
